<resources>
    <string name="app_name">Popular Movies</string>


    <!--The Movie Database Strings-->

    <!--TODO 1: Currently set up to use no_github.xml to hide API_Key from github.
     no_github.xml contains API_Key as a resource string
    Uncomment the line below and insert your API key or create a file
    no_github.xml and put the line below inside.-->

    <!--<string name="my_API_key">YOUR_API_KEY_HERE</string>-->

    <string name="Base_URL">http://image.tmdb.org/t/p/</string>
    <string name="poster_image_width">w185</string>
    <string name="popular_movie_search">popular</string>
    <string name="top_rated_movie_search">top_rated</string>

    <!--Main Activity XML Layout names strings-->


    <!--Menu Strings-->
    <string name="action_settings">Settings</string>
    <string name="action_popular">Popular</string>
    <string name="action_top_rated">Top Rated</string>


    <!--Detail Activity Strings-->

    <string name="cont_desc_poster">poster image</string>
    <string name="cont_desc_title">Title</string>
    <string name="cont_desc_vote">vote</string>
    <string name="cont_desc_release_date">date</string>
    <string name="cont_desc_popularity">popularity</string>

    <string name="vote_count_label">Vote Count:</string>
    <string name="release_date_label">Release Date:</string>
    <string name="popularity_label">Popularity:</string>
</resources>
